fixed layout problems

--- a/src/components/RepoTile/RepoTile.css
+++ b/src/components/RepoTile/RepoTile.css
@@ -53,11 +53,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  min-width: 62px;
+  max-width: 62px;
 }
 
 .stars__p {
   margin-left: 4px;
-  margin-right: 20px;
   margin-top: 0;
   margin-bottom: 0;
 }
